--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,77 @@
-h1 {
-	color: red;
+#seaSattle {
+	width: 700px;
+	height: 750px;
+/*	background-color: blue;*/
+	margin: 0 auto;
+}
+#menu {
+	width: 700px;
+	height: 50px;
+	border: 1px solid;
+	box-sizing: border-box;
+	float: left;
+}
+
+.menuLi {
+	width: 100px;
+	height: 50px;
+	border: 1px solid;
+	box-sizing: border-box;
+	float: left;
+	text-align: center;
+}
+
+
+#user {
+	width: 330px;
+	height: 330px;
+	border: 1px solid;
+	box-sizing: border-box;
+	float: left;
+	background-image: url("../images/sea.jpg");
+}
+
+#comp {
+	width: 330px;
+	height: 330px;
+	border: 1px solid;
+	box-sizing: border-box;
+	float: left;
+}
+
+.seaMill
+ {
+	width: 25px;
+	height: 25px;
+	margin: 3px;
+	border: 1px solid;
+	box-sizing: border-box;
+	float: left;
+}
+
+.seaMillA {
+	width: 23px;
+	height: 23px;
+	background-color: red;
+	overflow: hidden;
+}
+
+.seaMillB {
+	width: 23px;
+	height: 23px;
+	background-color: green;
+	overflow: hidden;
+}
+
+.seaMillC {
+	width: 23px;
+	height: 23px;
+	background-color: gray;
+	overflow: hidden;
+}
+.seaMillD {
+	width: 23px;
+	height: 23px;
+	background-color: yellow;
+	/*overflow: hidden;*/
 }
