--- a/style/style.css
+++ b/style/style.css
@@ -1,24 +1,47 @@
 #seaSattle {
-	width: 700px;
-	height: 750px;
-/*	background-color: blue;*/
+	width: 660px;
+	height: 380px;
+	border: 1px solid;
+	border-radius: 25px;
 	margin: 0 auto;
 }
 #menu {
-	width: 700px;
+	width: 660px;
 	height: 50px;
 	border: 1px solid;
+	border-radius: 25px;
 	box-sizing: border-box;
 	float: left;
 }
 
-.menuLi {
+#menuLi {
 	width: 100px;
 	height: 50px;
 	border: 1px solid;
+	border-radius: 25px;
 	box-sizing: border-box;
 	float: left;
 	text-align: center;
+	font-size: 20px;
+}
+
+#massenge {
+	margin: 0 auto;
+	width: 450px;
+	height: 50px;
+	border: 1px solid;
+	border-radius: 25px;
+	text-align: center;
+	font-size: 20px;
+}
+
+#finish {
+	float: right;
+	width: 100px;
+	height: 50px;
+	border: 1px solid;
+	border-radius: 25px;
+	font-size: 20px;
 }
 
 
@@ -40,7 +63,7 @@
 	background-image: url("../images/sea.jpg");
 }
 
-.seaMillUser, .seaMillComp
+.seaMillUser,.seaMillComp
  {
 	width: 25px;
 	height: 25px;
@@ -74,5 +97,15 @@
 	width: 23px;
 	height: 23px;
 	background-color: yellow;
-	/*overflow: hidden;*/
+	overflow: hidden;
 }
+
+.fire {
+	font-size: 25px;
+	text-align: center;
+	color: black;
+}
+.dontFire {
+	font-size: 25px;
+	color: black;
+} 
