--- a/style/style.css
+++ b/style/style.css
@@ -1,42 +1,65 @@
 #seaSattle {
-	width: 700px;
-	height: 750px;
-/*	background-color: blue;*/
+	width: 660px;
+	height: 380px;
+	border: 1px solid;
+	border-radius: 25px;
 	margin: 0 auto;
+	background-color:  #c0c0c0;
 }
 #menu {
-	width: 700px;
+	width: 660px;
 	height: 50px;
 	border: 1px solid;
+	border-radius: 25px;
 	box-sizing: border-box;
 	float: left;
 }
 
-.menuLi {
-	width: 100px;
+#start, #finish {
+	width: 80px;
 	height: 50px;
 	border: 1px solid;
+	border-radius: 25px;
 	box-sizing: border-box;
 	float: left;
 	text-align: center;
+	font-size: 20px;
+	box-shadow: 0 0 10px rgba(0,0,0,3);
+}
+#start:hover, #finish:hover {
+	box-shadow: 5px 5px 5px rgba(0,0,0,5);
+	cursor: pointer;
 }
 
+#massenge {
+	float: left;
+	width: 496px;
+	height: 48px;
+	border: 1px solid;
+	border-radius: 25px;
+	text-align: center;
+	font-size: 20px;
+}
 
 #playerUser {
 	width: 330px;
 	height: 330px;
+	padding-left: 8px;
 	border: 1px solid;
 	box-sizing: border-box;
 	float: left;
+	border-radius: 0.0px 0.0px 0.0px 16px;
 	background-image: url("../images/sea.jpg");
 }
 
 #playerComp {
 	width: 330px;
 	height: 330px;
+	padding-left: 8px;
 	border: 1px solid;
 	box-sizing: border-box;
 	float: left;
+	border-radius: 0.0px 0.0px 16px 0.0px;
 	background-image: url("../images/sea.jpg");
 }
 
@@ -50,6 +73,10 @@
 	float: left;
 }
 
+.seaMillUser,.seaMillComp {
+	cursor: pointer;
+}
+
 .seaMillA {
 	width: 23px;
 	height: 23px;
@@ -60,19 +87,47 @@
 .seaMillB {
 	width: 23px;
 	height: 23px;
-	background-color: green;
+	background-color: blue;
 	overflow: hidden;
 }
 
 .seaMillC {
 	width: 23px;
 	height: 23px;
-	background-color: gray;
+	background-color: green;
 	overflow: hidden;
 }
 .seaMillD {
 	width: 23px;
 	height: 23px;
 	background-color: yellow;
-	/*overflow: hidden;*/
+	overflow: hidden;
+}
+
+.fire {
+	font-size: 25px;
+	text-align: center;
+	color: red;
+}
+.dontFire {
+	font-size: 25px;
+	color: yellow;
+} 
+
+.info {
+	margin: 0 auto;
+	color: white;
+	font-size: 20px;
+}
+
+.winnerLoser {
+	color: white;
+	margin: 100px 50px;
+	font-size: 40px;
+}
+
+.neutral {
+	font-size: 25px;
+	text-align: center;
+	color: white;
 }
